--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
         </nav>
     </header>
     <section class="hero"></section>
-    <article>
-        <h2>About Me</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, consequatur?</p>
+    <article class="about-me">
+        <div class="flex">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, consequatur?</p>
+        </div>  
     </article>
     <section>
         <h2>Work</h2>
         <!--Add placeholder images and one image with pic and link-->
     </section>
-
-
-    <footer>
-        <h2>Contact</h2>
+    <section>
+        <h3>Contact</h3>
         <div>
             <ul>
                 <li>
@@ -53,6 +53,11 @@
                 </li>
             </ul>
         </div>
+    </section>
+
+
+    <footer>
+        
     </footer>
     
 </body>
