--- a/index.html
+++ b/index.html
@@ -28,18 +28,21 @@
         </nav>
     </header>
     <section class="hero"></section>
-    <article class="about-me">
-        <div class="flex">
-            <h2>About Me</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, consequatur?</p>
+
+    <section id="about-me" class="me">
+        <div class="flex-row">
+            <h2 class="sections">About Me</h2>
+        </div>
+        <div class="flex-row">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti quidem repudiandae, ut ipsam velit quas recusandae sint unde incidunt fugit rerum! Dolorum neque eos est aliquam. Neque, atque, odit sed error maiores hic, qui accusantium quibusdam sapiente at dolorum commodi incidunt cupiditate enim vero quo laudantium natus in dolores rem!</p>
         </div>  
-    </article>
+    </section>
     <section>
         <h2>Work</h2>
         <!--Add placeholder images and one image with pic and link-->
     </section>
     <section>
-        <h3>Contact</h3>
+        <h2>Contact</h2>
         <div>
             <ul>
                 <li>
