fixed flex in  about me section

--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
     <section class="hero"></section>
 
     <section id="about-me" class="me">
-        <div class="flex-row">
+        <div class="flex-row-about-me">
             <h2 class="sections">About Me</h2>
         </div>
-        <div class="flex-row">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti quidem repudiandae, ut ipsam velit quas recusandae sint unde incidunt fugit rerum! Dolorum neque eos est aliquam. Neque, atque, odit sed error maiores hic, qui accusantium quibusdam sapiente at dolorum commodi incidunt cupiditate enim vero quo laudantium natus in dolores rem!</p>
+        <div class="flex-row-description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis earum voluptatum suscipit est dolor quod maiores aperiam aliquid architecto, natus cum quis, cumque dolorem placeat officiis voluptates! Odio unde excepturi dicta eaque laborum ipsum tempora voluptatibus delectus, quo aperiam, eum iusto numquam maxime vero harum! Dolores consectetur odio, quo cumque aliquam voluptatibus saepe est mollitia, officia optio nisi? Explicabo ipsa vel cumque alias illo, esse voluptatum dolores fugit maxime aliquam consectetur laboriosam delectus minus odio voluptatibus hic quas error veritatis natus, eaque dicta soluta. Adipisci, quisquam minus? Dolore, dignissimos vero aut incidunt deserunt placeat consequatur repudiandae dicta, accusamus quaerat temporibus quo saepe, corrupti ex excepturi. Quos, natus nesciunt debitis voluptates voluptatum itaque totam laudantium dignissimos optio voluptatibus exercitationem nemo eum asperiores recusandae facilis a obcaecati sapiente explicabo laborum error. Cupiditate iusto quos quas accusamus tempore repellendus impedit, earum, corporis animi, id perferendis eos officiis quibusdam suscipit laudantium fugiat nemo nulla?</p>
         </div>  
     </section>
-    <section>
+    <section id="my-work" class="work">
         <h2>Work</h2>
         <!--Add placeholder images and one image with pic and link-->
     </section>
     <section>
         <h2>Contact</h2>
-        <div>
+        <div class="contact-info">
             <ul>
                 <li>
                     <a href="mailto: avrumiesafranovitz@gmail.com">Email</a>
