added work section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
         </div>  
     </section>
     <section id="my-work" class="work">
-        <h2>Work</h2>
-        <!--Add placeholder images and one image with pic and link-->
+        <h2>Work</h2> <!--Add new div like above-->
+        <div class="run-buddy">
+            <a href="https://asafran92.github.io/run-buddy/">
+                <img src="./images/run-buddy.PNG" alt="Run-buddy-website-picture" />
+            </a>
+        </div>
     </section>
     <section>
         <h2>Contact</h2>
