added images and image placeholders

--- a/index.html
+++ b/index.html
@@ -31,17 +31,28 @@
 
     <section id="about-me" class="me">
         <div class="flex-row-about-me">
-            <h2 class="sections">About Me</h2>
+            <h2>About Me</h2>
         </div>
         <div class="flex-row-description">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis earum voluptatum suscipit est dolor quod maiores aperiam aliquid architecto, natus cum quis, cumque dolorem placeat officiis voluptates! Odio unde excepturi dicta eaque laborum ipsum tempora voluptatibus delectus, quo aperiam, eum iusto numquam maxime vero harum! Dolores consectetur odio, quo cumque aliquam voluptatibus saepe est mollitia, officia optio nisi? Explicabo ipsa vel cumque alias illo, esse voluptatum dolores fugit maxime aliquam consectetur laboriosam delectus minus odio voluptatibus hic quas error veritatis natus, eaque dicta soluta. Adipisci, quisquam minus? Dolore, dignissimos vero aut incidunt deserunt placeat consequatur repudiandae dicta, accusamus quaerat temporibus quo saepe, corrupti ex excepturi. Quos, natus nesciunt debitis voluptates voluptatum itaque totam laudantium dignissimos optio voluptatibus exercitationem nemo eum asperiores recusandae facilis a obcaecati sapiente explicabo laborum error. Cupiditate iusto quos quas accusamus tempore repellendus impedit, earum, corporis animi, id perferendis eos officiis quibusdam suscipit laudantium fugiat nemo nulla?</p>
         </div>  
     </section>
     <section id="my-work" class="work">
-        <h2>Work</h2> <!--Add new div like above-->
-        <div class="run-buddy">
+        <div class="flex-row-about-me">
+            <h2>Work</h2>
+        </div>
+        <div class="pictures">
             <a href="https://asafran92.github.io/run-buddy/">
-                <img src="./images/run-buddy.PNG" alt="Run-buddy-website-picture" />
+                <img class="item" src="./images/run-buddy.PNG" alt="Run-buddy-website-picture" />
+            </a>
+            <a href="#">
+                <img class="item" src="./images/250.png" alt="placeholder-image" />
+            </a>
+            <a href="#">
+                <img class="item" src="./images/250.png" alt="placeholder-image" />
+            </a>
+            <a href="#">
+                <img class="item" src="./images/250.png" alt="placeholder-image" />
             </a>
         </div>
     </section>
