fixed css hovering issues and added additional HTML

--- a/index.html
+++ b/index.html
@@ -27,56 +27,55 @@
             </ul>
         </nav>
     </header>
-    <section class="hero"></section>
+    <section class="hero">
+        <h2>More Coming Soon!</h2>
+    </section>
 
     <section id="about-me" class="me">
         <div class="flex-row-about-me">
             <h2>About Me</h2>
         </div>
         <div class="flex-row-description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis earum voluptatum suscipit est dolor quod maiores aperiam aliquid architecto, natus cum quis, cumque dolorem placeat officiis voluptates! Odio unde excepturi dicta eaque laborum ipsum tempora voluptatibus delectus, quo aperiam, eum iusto numquam maxime vero harum! Dolores consectetur odio, quo cumque aliquam voluptatibus saepe est mollitia, officia optio nisi? Explicabo ipsa vel cumque alias illo, esse voluptatum dolores fugit maxime aliquam consectetur laboriosam delectus minus odio voluptatibus hic quas error veritatis natus, eaque dicta soluta. Adipisci, quisquam minus? Dolore, dignissimos vero aut incidunt deserunt placeat consequatur repudiandae dicta, accusamus quaerat temporibus quo saepe, corrupti ex excepturi. Quos, natus nesciunt debitis voluptates voluptatum itaque totam laudantium dignissimos optio voluptatibus exercitationem nemo eum asperiores recusandae facilis a obcaecati sapiente explicabo laborum error. Cupiditate iusto quos quas accusamus tempore repellendus impedit, earum, corporis animi, id perferendis eos officiis quibusdam suscipit laudantium fugiat nemo nulla?</p>
+            <p>Hi! My name is Avrumie - Husband to one, father of three, and author of zero books. I work as a controller in a medical supplied company amd have a passion for coding. That's why I signed up for the bootcamp. I work hard each day to practice building on my skills and hope to get better each day. Thanks for visiting!</p>
         </div>  
     </section>
-    <section id="my-work" class="work">
-        <div class="flex-row-about-me">
+    <section id="work" class="work">
+        <div class="my-work">
             <h2>Work</h2>
         </div>
-        <div class="pictures">
+        <div class="work-pictures">
             <a href="https://asafran92.github.io/run-buddy/">
-                <img class="item" src="./images/run-buddy.PNG" alt="Run-buddy-website-picture" />
+                <img src="./images/run-buddy2.PNG" alt="Run-buddy-website-picture" />
             </a>
             <a href="#">
-                <img class="item" src="./images/250.png" alt="placeholder-image" />
+                <img src="./images/250.png" alt="placeholder-image" />
             </a>
             <a href="#">
-                <img class="item" src="./images/250.png" alt="placeholder-image" />
+                <img src="./images/250.png" alt="placeholder-image" />
             </a>
             <a href="#">
-                <img class="item" src="./images/250.png" alt="placeholder-image" />
+                <img src="./images/250.png" alt="placeholder-image" />
             </a>
         </div>
     </section>
-    <section>
-        <h2>Contact</h2>
-        <div class="contact-info">
-            <ul>
-                <li>
-                    <a href="mailto: avrumiesafranovitz@gmail.com">Email</a>
-                </li>
-                <li>
-                    <a href="https://github.com/Asafran92">Github</a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/SafySaf92">Twitter</a>
-                </li>
-            </ul>
-        </div>
-    </section>
-
-
-    <footer>
-        
-    </footer>
     
+    <footer>
+        <section id="contact">
+        <h2>Contact</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="mailto: avrumiesafranovitz@gmail.com">Email</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/Asafran92">Github</a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/SafySaf92">Twitter</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>          
+    </footer>  
 </body>
 </html>
