--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <h1>
             <a href="./index.html">Avrumie's Portfolio</a>
         </h1>
-        <!--Nav bar, unordered list elements, and anchor elements-->
         <nav>
             <ul>
                 <li>
@@ -47,14 +46,14 @@
             <a href="https://asafran92.github.io/run-buddy/">
                 <img src="./images/run-buddy2.PNG" alt="Run-buddy-website-picture" />
             </a>
-            <a href="#">
-                <img src="./images/250.png" alt="placeholder-image" />
+            <a href="https://jciii91.github.io/space-launch/">
+                <img src="./images/spacelaunch.PNG" alt="space-launch-website-picture" />
             </a>
             <a href="#">
-                <img src="./images/250.png" alt="placeholder-image" />
+                <img src="./images/work-day-scheduler.PNG" alt="work-day-scheduler-website-picturee" />
             </a>
             <a href="#">
-                <img src="./images/250.png" alt="placeholder-image" />
+                <img src="./images/random-password-generator.PNG" alt="random-password-generator-website-picturee" />
             </a>
         </div>
     </section>
