added travel planner

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             <a href="#">
                 <img src="./images/random-password-generator.PNG" alt="random-password-generator-website-picturee" />
             </a>
+            </a>
+            <a href="#">
+                <img src="./images/Capture1.PNG" alt="travel planner" />
+            </a>
         </div>
     </section>
     
