added link for new project

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img src="./images/random-password-generator.PNG" alt="random-password-generator-website-picturee" />
             </a>
             </a>
-            <a href="#">
+            <a href="https://cb-travel-project.herokuapp.com/">
                 <img src="./images/Capture1.PNG" alt="travel planner" />
             </a>
         </div>
