--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
             <a href="#">
                 <img src="./images/work-day-scheduler.PNG" alt="work-day-scheduler-website-picturee" />
             </a>
-            <a href="#">
-                <img src="./images/random-password-generator.PNG" alt="random-password-generator-website-picturee" />
-            </a>
+
             </a>
             <a href="https://cb-travel-project.herokuapp.com/">
-                <img src="./images/Capture1.PNG" alt="travel planner" />
+                <img src="./images/travelplanner.PNG" alt="travel planner" />
+            </a>
+            <a href="https://fathomless-peak-27221.herokuapp.com/">
+                <img src="./images/Ouid.PNG" alt="Ouid Cavern Project" />
             </a>
         </div>
     </section>
